# experimental_assignment2

./: README.md  logic.txt  notes.txt
ws/install/: local_setup.sh  setup.sh
ws/install/aruco_opencv/lib/aruco_opencv/: aruco_tracker  aruco_tracker_autostart
ws/install/aruco_opencv/share/ament_index/resource_index/parent_prefix_path/: aruco_opencv
ws/install/aruco_opencv/share/aruco_opencv/: local_setup.sh  package.sh
ws/install/aruco_opencv/share/aruco_opencv/cmake/: aruco_opencvConfig.cmake
ws/install/aruco_opencv_msgs/include/aruco_opencv_msgs/aruco_opencv_msgs/msg/detail/: aruco_detection__builder.hpp  aruco_detection__description.c  aruco_detection__rosidl_typesupport_fastrtps_cpp.hpp  aruco_detection__struct.hpp  aruco_detection__type_support.c  board_pose__description.c  board_pose__rosidl_typesupport_fastrtps_cpp.hpp  board_pose__struct.h  board_pose__struct.hpp  board_pose__type_support.c  board_pose__type_support.cpp  marker_pose__description.c  marker_pose__functions.c  marker_pose__struct.h  marker_pose__struct.hpp  marker_pose__type_support.c  marker_pose__type_support.cpp  marker_pose__type_support.h
ws/install/aruco_opencv_msgs/share/aruco_opencv_msgs/: package.sh
ws/install/aruco_opencv_msgs/share/aruco_opencv_msgs/cmake/: aruco_opencv_msgsConfig.cmake  aruco_opencv_msgs__rosidl_typesupport_cExport.cmake  aruco_opencv_msgs__rosidl_typesupport_cppExport.cmake  aruco_opencv_msgs__rosidl_typesupport_introspection_cExport.cmake  aruco_opencv_msgs__rosidl_typesupport_introspection_cppExport.cmake  export_aruco_opencv_msgs__rosidl_generator_cppExport.cmake  export_aruco_opencv_msgs__rosidl_typesupport_fastrtps_cExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
ws/install/aruco_opencv_msgs/share/aruco_opencv_msgs/msg/: BoardPose.json  MarkerPose.json
ws/install/assignment2_exprob/share/assignment2_exprob/: package.bash  package.zsh
ws/install/bme_gazebo_sensors/share/bme_gazebo_sensors/: local_setup.sh  package.sh
ws/install/bme_gazebo_sensors/share/bme_gazebo_sensors/urdf/: mogi_bot.gazebo  mogi_bot.urdf
ws/install/erl1/share/erl1/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ws/install/plansys_interface/lib/plansys_interface/: ask_charge_action_node  charge_action_node  get_plan  move_action_node  move_action_node_2
ws/install/plansys_interface/share/ament_index/resource_index/parent_prefix_path/: plansys_interface
ws/install/plansys_interface/share/plansys_interface/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ws/install/plansys_interface/share/plansys_interface/cmake/: plansys_interfaceConfig.cmake
ws/install/plansys_interface/share/plansys_interface/domain/: problem.pddl
ws/install/plansys_interface/share/plansys_interface/launch/: distributed_actions_2.launch.py  distributed_actions_assignment.launch.py  distributed_ex.launch.py
ws/install/ros2_navigation/share/ros2_navigation/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ws/install/ros2_navigation/share/ros2_navigation/config/: navigation.yaml
ws/install/ros2_navigation/share/ros2_navigation/launch/: assignment_localization.launch.py  localization.launch.py  mapping.launch.py
ws/install/ros2_navigation/share/ros2_navigation/maps/: assignment_map.pgm  my_map.pgm
ws/log/: latest_build
ws/src/erl1_sensors/bme_gazebo_sensors/launch/: spawn_robot.launch.py
ws/src/plansys2_interface/: CMakeLists.txt  package.xml
ws/src/plansys2_interface/msg/: DetectedMarker.msg  DetectedMarkers.msg
ws/src/plansys2_interface/srv/: GetMarkerPose.srv
ws/src/plansys_interface/: CMakeLists.txt  TODO.md  package.xml
ws/src/plansys_interface/domain/: domain.pddl  problem.pddl
ws/src/plansys_interface/launch/: distributed.launch.py  distributed_actions.launch.py  distributed_actions_3.launch.py  distributed_actions_assignment.launch.py
ws/src/plansys_interface/src/: align_action_node.cpp  ask_charge_action_node.cpp  charge_action_node.cpp  finish_detection_action_node.cpp  getplan.cpp  getplan_and_execute.cpp  move_action_node.cpp  move_action_node_2.cpp  move_action_node_3.cpp  photograph_marker_action_node.cpp  rotate_and_detect_action_node.cpp  world_node.cpp
ws/src/ros2_navigation/: CMakeLists.txt  package.xml
ws/src/ros2_navigation/config/: navigation.yaml
ws/src/ros2_navigation/launch/: assignment_localization.launch.py  navigation.launch.py
ws/src/ros2_navigation/maps/: assignment_map.yaml  final_map.pgm  final_map.yaml  my_map.yaml
ws/src/ros_aruco_opencv/aruco_opencv/config/: aruco_tracker.yaml
